adding new role to test connection to VM

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,9 +1,9 @@
 all:
   hosts:
     windows_server:
-      ansible_host: 192.168.1.100
-      ansible_user: Administrator
-      ansible_password: YourPasswordHere
+      ansible_host: 20.19.169.1
+      ansible_user: azureuser
+      ansible_password: azurepassword123!
       ansible_connection: winrm
       ansible_winrm_transport: basic
       ansible_winrm_server_cert_validation: ignore
