--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,9 +1,12 @@
+---
 all:
   hosts:
     windows_server:
-      ansible_host: 20.19.169.1
+      ansible_host: 51.103.101.205
       ansible_user: azureuser
-      ansible_password: azurepassword123!
+      ansible_password: password123!
       ansible_connection: winrm
       ansible_winrm_transport: basic
+      ansible_winrm_port: 5985  # Force HTTP port
+      ansible_winrm_scheme: http  # Use HTTP instead of HTTPS
       ansible_winrm_server_cert_validation: ignore
