--- a/roles/windows_dotnet_app/tasks/main.yml
+++ b/roles/windows_dotnet_app/tasks/main.yml
@@ -53,7 +53,7 @@
     direction: in
 
 - name: Verify website is running
-  wait_for:
+  win_wait_for:
     host: localhost
     port: 8080
     state: started
