--- a/roles/windows_dotnet_app/tasks/main.yml
+++ b/roles/windows_dotnet_app/tasks/main.yml
@@ -40,6 +40,7 @@
   win_copy:
     src: C:\Temp\DemoApp\publish\
     dest: C:\inetpub\wwwroot\DemoApp
+    remote_src: yes
     removes: C:\inetpub\wwwroot\DemoApp
 
 - name: Create a new IIS website for DemoApp
